# ckanext-webview

./: .cz.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  setup.cfg  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  tests.yml
ckanext/: __init__.py
ckanext/webview/: plugin.py
ckanext/webview/logic/: validators.py
ckanext/webview/theme/assets/: webassets.yml
ckanext/webview/theme/assets/css/: webview.css
ckanext/webview/theme/assets/less/: webview.less
ckanext/webview/theme/templates/views/: web_view.html  web_view_form.html
docker/: Dockerfile
docs/: index.md
docs/_scripts/: gen_api_pages.py
tests/: test_validators.py
