[metadata]
name = ckanext-webview
version = 1.0.0
description = A CKAN extension that adds a view for displaying generic/arbitrary URLs.
long_description = file: README.md
license_files = LICENSE
author = Natural History Museum
author_email = data@nhm.ac.uk
url = https://github.com/NaturalHistoryMuseum/ckanext-webview
keywords = CKAN data webview
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ckantools @ git+https://github.com/NaturalHistoryMuseum/ckantools.git

[options.extras_require]
test =
    mock
    pytest>=4.6.5
    pytest-cov>=2.7.1
    coveralls

[options.packages.find]
exclude =
    tests

[options.entry_points]
ckan.plugins =
    webview = ckanext.webview.plugin:WebviewPlugin
